# online-school

./: .gitignore  README.md  package-lock.json
back/: .env.development  .env.production  .flaskenv  README.md  alembic.ini  api.org  config.py  example.env  pyproject.toml  run.py
back/alembic/: env.py
back/app/: __init__.py
back/app/api/: __init__.py  routes.py
back/app/api/v0/: __init__.py  auth.py  courses.py  users.py
back/app/auth/: routes.py
back/app/main/: routes.py
back/app/models/: __init__.py  course.py  user.py
back/app/seeds/: __init__.py  courses.py  users.py
back/app/templates/: dashboard.html  login.html
back/app/utils/: __init__.py
back/migrations/: env.py
back/migrations/versions/: 2025_07_21_1335-d206e1f57cba_add_user_model.py  2025_07_30_1124-837bfcf1eeb6_add_course.py  2025_08_01_1600-a1e7e03a84e1_add_course.py  2025_08_03_1727-c749667dcc5d_add_user_columns_for_full_accounts.py  2025_08_04_1349-5753c3a94b97_constrain_course_title_and_owner_.py  2025_08_25_1553-7f04f8f75b23_add_country_to_user_model.py  2025_09_04_1706-77dcecd978be_add_level_price_is_published_video_.py
front/: .eslintrc.cjs  .gitignore  .prettierrc  DESIGN_SYSTEM.md  LANDING_PAGE_DESIGN.md  README.md  design-system-test.html  index.html  package-lock.json  package.json  vite.config.js
front/src/: index.css  main.jsx
front/src/components/BlankPage/: BlankPage.css  BlankPage.jsx
front/src/components/ChatBot/: GeminiChat.css  (+1 more)
front/src/context/: Modal.css  Modal.jsx
front/src/redux/: course.js  session.js  store.js
front/src/router/: Layout.jsx  index.jsx
front/src/store/: index.js
front/src/styles/: design-system.css
(+111 files in other folders)
