[project]
name = "back"
version = "0.1.0"
description = "best online school ever!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "flask-jwt-extended>=4.5.0",
    "bcrypt>=4.0.0",
    "flask-login>=0.6.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 70

[tool.ruff.format]
line-ending = "lf"

[project.scripts]
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."
