[project]
name = "back"
version = "0.1.0"
description = "best online school ever!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=6.0.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 70

[tool.ruff.format]
line-ending = "lf"

[project.scripts]
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."
